--- a/templates/base.html
+++ b/templates/base.html
@@ -359,7 +359,7 @@
     <!-- Nav Sidebar -->
     <!-- This is source ordered to be pulled to the left on larger screens -->
     <div class="large-3 pull-9 columns">
-      <ul class="side-nav hide-for-small">
+      <ul class="side-nav">
         {% block sidebar %}{% endblock %}
       </ul>        
     </div>
