--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -157,7 +157,7 @@ Side Bar
 	text-overflow: ellipsis;
 	overflow: hidden;
 	display: block;
-	white-space: nowrap;
+	white-space: initial;
 }
 
 .side-nav ul li a{
