design custom bloc

--- a/assets/scss/zds.scss
+++ b/assets/scss/zds.scss
@@ -5,6 +5,7 @@
 @import "custom";
 @import "fonts";
 @import "editor";
+@import "blocs";
 @import "foundation-icons";
 
 // Or selectively include components
