--- a/templates/base.html
+++ b/templates/base.html
@@ -406,6 +406,11 @@
             messageStyle: "none",
         });
     </script>
+    <script>
+    $(".spoiler").on("click", function(){
+        $(".spoiler").children('p').slideToggle("slow");
+    });
+    </script>
     <script type="text/javascript" src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
   </body>
