--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,26 +1,28 @@
 {% extends "pages/base.html" %}
 
+
+
 {% block title %}
     Pages
 {% endblock %}
 
+
+
 {% block breadcrumb %}
-    <li class="current"><a href="#">Index</a></li>
+    <li class="current">Index</li>
 {% endblock %}
+
+
 
 {% block headline %}
-    Pages
+    <h1>Pages</h1>
 {% endblock %}
 
+
+
 {% block content %}
-
-<div class="row">
-    <div class="large-12 columns">
-        <ul>
-            <li><a href="{% url "zds.pages.views.help_markdown" %}">Documentation de Markdown et des différentes extensions</a></li>
-            <li><a href="{% url "zds.pages.views.about" %}">À propos</a></li>
-        </ul>
-    </div>
-</div>
-
+    <ul>
+        <li><a href="{% url "zds.pages.views.help_markdown" %}">Documentation de Markdown et des différentes extensions</a></li>
+        <li><a href="{% url "zds.pages.views.about" %}">À propos</a></li>
+    </ul>
 {% endblock %}
