Templates refacto : gallery

--- a/assets/css/scss/_all-supports.scss
+++ b/assets/css/scss/_all-supports.scss
@@ -919,6 +919,11 @@
                     color: #084561;
                 }
             }
+
+            .info {
+                padding-left: 5px;
+                color: #777;
+            }
         }
     }
 }
