--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -22,7 +22,7 @@
 
 
 
-{% block subheadline %}
+{% block headline_sub %}
     {% if query and page.object_list %}
         <h3 class="subtitle">Résultats</h3>
     {% endif %}
