--- a/templates/mp/new.html
+++ b/templates/mp/new.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block head-title %}
-    Nouveau Messae Privé
+    Nouveau Message Privé
 {% endblock %}
 
 {% block breadcrumb %}
