--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -13,16 +13,13 @@
 {% endblock %}
 
 {% block content %}
-
-<div class="row">	
     <div class="large-12 columns">
   		<p>Si vous vous intéressez à tous ça, vous devriez songer à <a href="https://github.com/Taluu/ZesteDeSavoir">contribuer au développement du site</a> !</p>
     </div>
     <div class="large-4 columns">
         <h3>Copyrights</h3>
-        <p>Zeste de Savoir est un logiciel libre distribué sous licence <a href="http://www.gnu.org/licenses/gpl-3.0.html">GPL v3</a>, et provient en parti de <a href="http://progdupeu.pl">Progdupeupl</a>.</p>
+        <p>Zeste de Savoir est un site donc le code source est sous licence <a href="http://www.gnu.org/licenses/gpl-3.0.html">GPL v3</a>, et provient en parti de <a href="http://progdupeu.pl">Progdupeupl</a>.</p>
         <p><a href="#">Le logo de Zeste de Savoir</a> est de MaxRoyo et est disponible sous licence [TODO]</p>
-        <p>Les tutoriels et les articles sont la propriété de leurs auteurs.</p>
     </div>
     <div class="large-4 columns">
         <h3>Système</h3>
@@ -44,7 +41,7 @@
     </div>
     <div class="large-4 columns">
         <h3>Technologies</h3>
-        <p>Le site de Zeste de Savoir utilise ces technologies pour un meilleur affichage :</p>
+        <p>Le site Zeste de Savoir utilise les technologies suivantes pour l'affichage :</p>
         <p><strong>Feuilles de style</strong></p>
         <ul>
             <li><a href="http://compass-style.org/">Compass</a></li>
@@ -57,6 +54,5 @@
             <li><a href="http://jquery.com/">jQuery 2.x</a></li>
         </ul>
     </div>
-</div>
 
 {% endblock %}
