--- a/templates/member/forgot_password.html
+++ b/templates/member/forgot_password.html
@@ -1,12 +1,12 @@
-{% extends "member/base.html" %}
+{% extends "member/source.html" %}
 {% load crispy_forms_tags %}
 
 {% block title %}
     Mot de passe oublié
 {% endblock %}
 
-{% block headline %}
-    <h2 class="box member">Mot de passe oublié</h2>
+{% block head-title %}
+    Mot de passe oublié
 {% endblock %}
 
 {% block breadcrumb %}
