--- a/templates/member/forgot_password_success.html
+++ b/templates/member/forgot_password_success.html
@@ -1,11 +1,11 @@
-{% extends "member/base.html" %}
+{% extends "member/source.html" %}
 
 {% block title %}
     Mot de passe oublié
 {% endblock %}
 
-{% block headline %}
-    <h2 class="box member">Mot de passe oublié</h2>
+{% block head-title %}
+    Mot de passe oublié
 {% endblock %}
 
 {% block breadcrumb %}
