--- a/templates/member/register.html
+++ b/templates/member/register.html
@@ -1,12 +1,12 @@
-{% extends "member/base.html" %}
+{% extends "member/source.html" %}
 {% load crispy_forms_tags %}
 
 {% block title %}
     S'incrire
 {% endblock %}
 
-{% block headline %}
-    <h2 class="box member">S'inscrire</h2>
+{% block head-title %}
+    S'inscrire
 {% endblock %}
 
 {% block breadcrumb %}
