--- a/templates/member/register_success.html
+++ b/templates/member/register_success.html
@@ -1,11 +1,11 @@
-{% extends "member/base.html" %}
+{% extends "member/source.html" %}
 
 {% block title %}
     Inscription réussie
 {% endblock %}
 
-{% block headline %}
-    <h2 class="box member">Inscription réussie</h2>
+{% block head-title %}
+    Inscription réussie
 {% endblock %}
 
 {% block breadcrumb %}
