--- a/templates/member/token_account_failed.html
+++ b/templates/member/token_account_failed.html
@@ -1,11 +1,11 @@
-{% extends "member/base.html" %}
+{% extends "member/source.html" %}
 
 {% block title %}
     Jeton expiré
 {% endblock %}
 
-{% block headline %}
-    <h2 class="box member">Jeton expiré</h2>
+{% block head-title %}
+    Jeton expiré
 {% endblock %}
 
 {% block breadcrumb %}
