--- a/templates/member/token_account_success.html
+++ b/templates/member/token_account_success.html
@@ -1,11 +1,11 @@
-{% extends "member/base.html" %}
+{% extends "member/source.html" %}
 
 {% block title %}
     Confirmation d'inscription réussie
 {% endblock %}
 
-{% block headline %}
-    <h2 class="box member">Confirmation d'inscription réussie</h2>
+{% block head-title %}
+    Confirmation d'inscription réussie
 {% endblock %}
 
 {% block breadcrumb %}
