--- a/templates/forum/feeds.part.html
+++ b/templates/forum/feeds.part.html
@@ -1,7 +1,5 @@
-<a href="#" class="button secondary dropdown" data-dropdown="forums-drop-feeds">
-    Flux
-</a><br />
-<ul id="forums-drop-feeds" class="f-dropdown">
+
+<ul id="forums-drop-feeds">
     <li><a href="{% url "post-feed-rss" %}">Nouveaux messages (RSS)</a></li>
     <li><a href="{% url "post-feed-atom" %}">Nouveaux messages (ATOM)</a></li>
     <li><a href="{% url "topic-feed-rss" %}">Nouveaux sujets (RSS)</a></li>
