--- a/templates/member/login.html
+++ b/templates/member/login.html
@@ -1,12 +1,12 @@
-{% extends "member/base.html" %}
+{% extends "member/source.html" %}
 {% load crispy_forms_tags %}
 
 {% block title %}
     Connexion
 {% endblock %}
 
-{% block headline %}
-    <h2 class="box member">Se connecter</h2>
+{% block head-title %}
+    Se connecter
 {% endblock %}
 
 {% block breadcrumb %}
@@ -37,7 +37,7 @@
 
 {% if not user.is_authenticated %}
 <div class="row">
-    <div class="large-7 large-offset-1 columns">
+    <div class="large-7 columns large-centered">
         {% crispy form %}
     </div>
 </div>
