--- a/templates/forum/base.html
+++ b/templates/forum/base.html
@@ -2,9 +2,11 @@
 {% load interventions %}
 
 
+
 {% block title_base %}
     &#183; Forums
 {% endblock %}
+
 
 
 {% block breadcrumb_base %}
@@ -12,76 +14,81 @@
 {% endblock %}
 
 
+
 {% block menu_forum %}
     current
 {% endblock %}
 
 
+
 {% block sidebar %}
-<aside class="sidebar mobile-menu-hide">
-    {% if user.is_authenticated %}
-    <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions sur ce sujet">
-        <h3>Actions <span class="wide">sur ce sujet</span></h3>
-        <ul class="sidebar-standalone">
-            <div class="sidebar_actions">{% block sidebar_actions %}{% endblock %}</div>
-        </ul>
-    </div>
+    <aside class="sidebar mobile-menu-hide">
+        {% if user.is_authenticated %}
+            <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions sur ce sujet">
+                <h3>Actions</h3>
+                <ul class="sidebar-standalone">
+                    <div class="sidebar_actions">
+                        {% block sidebar_actions %}{% endblock %}
+                    </div>
+                </ul>
+            </div>
 
-    <div class="mobile-menu-bloc mobile-all-links" data-title="Sujets suivis">
-        <h3>Sujets suivis</h3>
-        <ul>
-        {% with topics=user|interventions_topics %}
-            {% for topic in topics.unread %}
-            <li>
-                <a href="{% url "zds.forum.views.edit" %}?topic={{ topic.pk }}&page=1&follow=1" 
-                   class="ico-after cross red stop-follow action-hover" 
-                   data-title="Ne plus suivre">
-                    Ne plus suivre
-                </a>
-                <a href="{{topic.get_absolute_url}}"
-                   class="unread
-                            {% if topic.is_solved or topic.is_locked %}
-                                ico-after
+            <div class="mobile-menu-bloc mobile-all-links" data-title="Sujets suivis">
+                <h3>Sujets suivis</h3>
+                <ul>
+                    {% with topics=user|interventions_topics %}
+                        {% for topic in topics.unread %}
+                            <li>
+                                <a href="{% url "zds.forum.views.edit" %}?topic={{ topic.pk }}&page=1&follow=1" 
+                                   class="ico-after cross red stop-follow action-hover" 
+                                   data-title="Ne plus suivre">
+                                    Ne plus suivre
+                                </a>
+                                <a href="{{topic.get_absolute_url}}"
+                                   class="unread
+                                    {% if topic.is_solved or topic.is_locked %}
+                                        ico-after
 
-                                {% if topic.is_solved %}
-                                    tick active
-                                {% endif %}
-                                {% if topic.is_locked %}
-                                    lock
-                                {% endif %}
-                            {% endif %}"
-                   data-prefix="{% if topic.is_solved %}Résolu{% endif %} {% if topic.is_locked %}Fermé{% endif %}">
-                    {{topic.title}}
-                </a>
-            </li>
-            {% endfor %}
+                                        {% if topic.is_solved %}
+                                            tick active
+                                        {% endif %}
+                                        {% if topic.is_locked %}
+                                            lock
+                                        {% endif %}
+                                    {% endif %}"
+                                   data-prefix="{% if topic.is_solved %}Résolu{% endif %} {% if topic.is_locked %}Fermé{% endif %}">
+                                    {{topic.title}}
+                                </a>
+                            </li>
+                        {% endfor %}
 
-            {% for topic in topics.read %}
-            <li>
-                <a href="{% url "zds.forum.views.edit" %}?topic={{ topic.pk }}&page=1&follow=1" 
-                   class="ico-after cross red stop-follow action-hover" 
-                   data-title="Ne plus suivre">
-                    Ne plus suivre
-                </a>
-                <a href="{{topic.get_absolute_url}}"
-                   class="  {% if topic.is_solved or topic.is_locked %}
-                                ico-after
+                        {% for topic in topics.read %}
+                            <li>
+                                <a href="{% url "zds.forum.views.edit" %}?topic={{ topic.pk }}&page=1&follow=1" 
+                                   class="ico-after cross red stop-follow action-hover" 
+                                   data-title="Ne plus suivre">
+                                    Ne plus suivre
+                                </a>
+                                <a href="{{topic.get_absolute_url}}"
+                                   class="
+                                    {% if topic.is_solved or topic.is_locked %}
+                                        ico-after
 
-                                {% if topic.is_solved %}
-                                    tick active
-                                {% endif %}
-                                {% if topic.is_locked %}
-                                    lock
-                                {% endif %}
-                            {% endif %}"
-                   data-prefix="{% if topic.is_solved %}Résolu{% endif %} {% if topic.is_locked %}Fermé{% endif %}">
-                    {{topic.title}}
-                </a>
-            </li>
-            {% endfor %}
-        {% endwith %}
-        </ul>
-    </div>
-    {% endif %}
-</aside>
+                                        {% if topic.is_solved %}
+                                            tick active
+                                        {% endif %}
+                                        {% if topic.is_locked %}
+                                            lock
+                                        {% endif %}
+                                    {% endif %}"
+                                   data-prefix="{% if topic.is_solved %}Résolu{% endif %} {% if topic.is_locked %}Fermé{% endif %}">
+                                    {{topic.title}}
+                                </a>
+                            </li>
+                        {% endfor %}
+                    {% endwith %}
+                </ul>
+            </div>
+        {% endif %}
+    </aside>
 {% endblock %}
