--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -365,6 +365,9 @@ h1.forum, h2.forum, h3.forum, h4.forum, h5.forum, h1.member, h2.member, h3.membe
 	border-bottom: 1px solid #ff8c00;
 }
 
+.topic_unread {
+	font-weight: 700;
+}
 .topics-entries .read{
 	background-color: #f4f6f6;
 }
