Licence logo (CC-BY MaxRoyo)

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -19,7 +19,7 @@
     <div class="large-4 columns">
         <h3>Copyrights</h3>
         <p>Zeste de Savoir est un site donc le code source est sous licence <a href="http://www.gnu.org/licenses/gpl-3.0.html">GPL v3</a>, et provient en parti de <a href="http://progdupeu.pl">Progdupeupl</a>.</p>
-        <p><a href="#">Le logo de Zeste de Savoir</a> est de MaxRoyo et est disponible sous licence [TODO]</p>
+        <p><a href="#">Le logo de Zeste de Savoir</a> est créé par MaxRoyo et sous licence <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" src="http://i.creativecommons.org/l/by/3.0/80x15.png" /> Creative Commons Attribution 3.0 Unported License</a>.</p>
     </div>
     <div class="large-4 columns">
         <h3>Système</h3>
